recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:47: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^Sierpinski:51: error: Missing closing brace `}' assumed here
}
^