recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	/*
	if (level > 0) {
		sierpinski(level - 1, length / 2 );
	} else { 
	// quand on est au niveau 0
		// on trace un triangle et on  (on se place pour le triangle suivant)
		for (k <- 1 to 3) {
			for (j <- 1 to 3) {	
				for (i <- 1 to 3)  { // se passe au niveau 0
					avance(length);
					droite(120);
				}
				avance(2 * length); // se passe au niveau 1
				droite(120);
			}
			avance(4 * length); // se passe au niveau 2
			droite(120);
		}
	
	}
	*/
	// -----------------------------------------

	// faire un triangle de taille nominale
	//println (" sierpinski, niveau : ", level);
	if (level > 0) {
		sierpinski(level - 1, length / 2);
		avance(length);
		droite(120);
		sierpinski(level - 1, length / 2);
		avance(length);
		droite(120);
		sierpinski(level - 1, length / 2);
		avance(length);
		droite(120);
	
	} else {
		for (i <- 1 to 3)  { // se passe au niveau 0
			avance(length);
			droite(120);
		}
	}
	
	